loki/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging-system
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
