loki/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loki-grafana
  namespace: logging-system
spec:
  hosts:
  - log.tomastrnka.cloud
  gateways:
  - istio-system/public-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: loki-grafana.logging-system.svc.cluster.local
        port: 
          number: 80
